--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Query</title>
+    <title>JS JQuery</title>
+    <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
 <body>
-    <script type="text/javascript" src="index.js"></script>
+   <p id="counter">0</p>
+   <button id="btn-plus">+</button>
+   <button id="btn-minus">-</buttom>
+   <button id="toggle">show/Hide</button>
+   <script
+        src="//code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+   <script src="index.js"></script>
 </body>
 </html>
